--- a/index.html
+++ b/index.html
@@ -421,6 +421,15 @@ https://templatemo.com/tm-531-reflux
                         </button>
                       </fieldset>
                     </div>
+                    &nbsp; &nbsp;
+                    <div class="col-md-12">
+                      <fieldset>
+                        <a href="https://brucellaneouss.github.io/TEAM_DevSprout/" id="back-to-main-page" class="button" style="display: inline-block; text-decoration: none;">
+                          BACK TO MAIN PAGE
+                        </a>
+                        </button>
+                      </fieldset>
+                    </div>
                   </div>
                 </form>
               </div>
